
version 1.2.45beta03 [June 19, 2011]
  Check for sCAL chunk too short.

version 1.2.45rc01 and 1.0.55rc01 [June 30, 2011]
  Updated "last changed" dates and copyright year.

version 1.2.45 and 1.0.55 [July 7, 2011]
  No changes.

version 1.2.46rc01 and 1.0.56rc01 [July 8, 2011]
  Reverted changes to Makefile.am and Makefile.in to libpng-1.2.44 versions.

version 1.2.46rc02 and 1.0.56rc02 [July 8, 2011]
  Added CMakeLists.txt, projects/xcode, and pnggccrd.c to EXTRA_DIST in
    Makefile.am and Makefile.in

version 1.2.46 and 1.0.56 [July 9, 2011]
  Udated copyright year to 2011.

version 1.2.47beta01 [February 17, 2012]
  Updated contrib/pngminus/makefile.std (Samuli Souminen)

version 1.0.57rc01 and 1.2.47rc01 [February 17, 2012]
  Fixed CVE-2011-3026 buffer overrun bug.
  Fixed CVE-2011-3026 buffer overrun bug.  This bug was introduced when
    iCCP chunk support was added at libpng-1.0.6.

version 1.0.57 and 1.2.47 [February 18, 2012]
  No changes.

version 1.2.48beta01 [February 27, 2012]
  Removed two useless #ifdef directives from pngread.c and one from pngrutil.c
  Eliminated redundant png_push_read_tEXt|zTXt|iTXt|unknown code from
    pngpread.c and use the sequential png_handle_tEXt, etc., in pngrutil.c;
    now that png_ptr->buffer is inaccessible to applications, the special
    handling is no longer useful.
  Fixed bug with png_handle_hIST with odd chunk length (Frank Busse).
  Fixed incorrect type (int copy should be png_size_t copy) in png_inflate().
  Fixed off-by-one bug in png_handle_sCAL() when using fixed point arithmetic,
    causing out-of-bounds read in png_set_sCAL() because of failure to copy
    the string terminators (Franke Busse).

version 1.2.48beta02 [February 27, 2012]

Send comments/corrections/commendations to png-mng-implement at lists.sf.net
(subscription required; visit
https://lists.sourceforge.net/lists/listinfo/png-mng-implement
to subscribe)
or to glennrp at users.sourceforge.net

Glenn R-P
#endif