@@ -56,6 +56,7 @@ version 1.2.48beta01 [Febuary 27, 2012]
     the string terminators (Franke Busse).
 
 version 1.2.48beta02 [February 27, 2012]
+  Removed the png_free() of unused png_ptr->current_text from pngread.c.
 
 (subscription required; visit
 https://lists.sourceforge.net/lists/listinfo/png-mng-implement
