@@ -2760,6 +2760,7 @@ version 1.2.48beta01 [February 27, 2012]
     the string terminators (Franke Busse).
 
 version 1.2.48beta02 [February 27, 2012]
+  Removed the png_free() of unused png_ptr->current_text from pngread.c.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
